add config.js to index.html

--- a/index.html
+++ b/index.html
@@ -445,6 +445,7 @@
         }
       }      
     </script>    
+    <script src="./assets/config.js"></script>
     <script src="./assets/jszip.min.js"></script>
     <script type="module" src="./assets/texts_converter.js"></script>
     <script src="./assets/socket_edge_tts.js"></script>
